# pytja-test

./: .gitignore  README.txt  docker-compose.yml  install.sh  leo.pytja
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
config/: default.toml
data/: local_vectors.db-shm  local_vectors.db-wal  mounts.json  pytja.db-shm  pytja.db-wal  vectors.db-shm  vectors.db-wal
plugins/: pytja_omni_agent.json
plugins/pytja_omni_agent/: Cargo.toml
plugins/pytja_omni_agent/src/: main.rs
pytja_admin/src/menus/: databases.rs
pytja_core/src/: crypto.rs  error.rs  lib.rs  models.rs  repo.rs
pytja_core/src/drivers/: mod.rs  pgvector.rs  sqlite_vec.rs
pytja_core/src/storage/: fs.rs
pytja_proto/proto/: pytja.proto
pytja_sdk/: Cargo.toml
pytja_sdk/examples/: sqlite_vec_e2e.rs  vector_e2e.rs
pytja_server/: Cargo.toml
pytja_server/src/: lib.rs  plugin_manager.rs  session_manager.rs
pytja_server/src/handlers/: admin.rs  filesystem.rs  mod.rs  service.rs  vector.rs
pytja_shell/src/: lib.rs  network_client.rs
pytja_shell/src/radar/: engine.rs  vfs.rs
pytja_window/src/: main.rs
src/: bootstrap.rs  main.rs
