[package]
name = "pytja_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
pytja_proto = { version = "0.1.0", path = "../pytja_proto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["tls"] }
