[package]
name = "pytja_omni_agent"
version = "1.0.0"
edition = "2021"
description = "Enterprise Omni-Agent Showcase for Pytja Radar"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# ENTERPRISE FIX: Isoliert das Plugin vom Haupt-Workspace
[workspace]